log.txt
Thu Nov 24 13:38:40 2022
Windows-10-10.0.19043
Ren'Py 8.0.1.22070801
 

Bootstrap to the start of init.init took 0.42s
Early init took 0.01s
Loader init took 0.16s
Loading error handling took 0.21s
Loading script took 1.41s
Loading save slot metadata. took 0.04s
Loading persistent took 0.00s

File "game/neg1.rpy", line 5: expected statement.
    void 
         ^
DPI scale factor: 1.000000
nvdrs: Loaded, about to disable thread optimizations.
nvdrs: b"Couldn't load nvlib." (can be ignored)
Interface start took 1.15s

Initializing gl2 renderer:
primary display bounds: (0, 0, 1366, 768)
swap interval: 1 frames
Windowed mode.
Vendor: "b'Intel'"
Renderer: b'Intel(R) UHD Graphics 605'
Version: b'4.6.0 - Build 27.20.100.8280'
Display Info: None
Screen sizes: virtual=(1920, 1080) physical=(1184, 666) drawable=(1184, 666)
Maximum texture size: 4096x4096
Resetting cache.
Bootstrap to the start of init.init took 73.13s
Early init took 0.00s
Loader init took 0.07s
Loading error handling took 0.04s
Loading script took 0.20s
Loading save slot metadata. took 0.02s
Loading persistent took 0.00s
Faled to initialize steam: FileNotFoundError("Could not find module 'C:\\Users\\student\\Desktop\\Applications\\renpy-8.0.1-sdk\\lib\\py3-windows-x86_64\\steam_api64.dll' (or one of its dependencies). Try using the full path with constructor syntax.")
Running init code took 0.13s
Loading analysis data took 0.03s
Analyze and compile ATL took 0.00s
Index archives took 0.00s
Backing up script files to 'C:\\Users\\student\\AppData\\Roaming/RenPy/backups\\AAA':
Dump and make backups. took 0.11s
Cleaning cache took 0.00s
Making clean stores took 0.00s
Initial gc. took 0.04s
DPI scale factor: 1.000000
nvdrs: Loaded, about to disable thread optimizations.
nvdrs: b"Couldn't load nvlib." (can be ignored)
Creating interface object took 0.00s
Cleaning stores took 0.00s
Init translation took 0.06s
Build styles took 0.01s
Load screen analysis took 0.00s
Analyze screens took 0.02s
Save screen analysis took 0.03s
Prepare screens took 0.10s
Save pyanalysis. took 0.00s
Save bytecode. took 0.03s
Running _start took 0.00s
Performance test:
Interface start took 0.07s

Initializing gl2 renderer:
primary display bounds: (0, 0, 1366, 768)
swap interval: 1 frames
Windowed mode.
Vendor: "b'Intel'"
Renderer: b'Intel(R) UHD Graphics 605'
Version: b'4.6.0 - Build 27.20.100.8280'
Display Info: None
Screen sizes: virtual=(1920, 1080) physical=(1184, 666) drawable=(1184, 666)
Maximum texture size: 4096x4096

Full traceback:
  File "game/script.rpy", line 13, in script call
    call neg1
  File "game/neg1.rpy", line 3, in script
    play music ["./audio/You and Me.mp3", <silence 2.5>, "./audio/10dC.mp3"] volume 0.1 fadein 4 fadeout 4
  File "C:\Users\student\Desktop\Applications\renpy-8.0.1-sdk\renpy\ast.py", line 2232, in execute
    self.call("execute")
  File "C:\Users\student\Desktop\Applications\renpy-8.0.1-sdk\renpy\ast.py", line 2220, in call
    return renpy.statements.call(method, parsed, *args, **kwargs)
  File "C:\Users\student\Desktop\Applications\renpy-8.0.1-sdk\renpy\statements.py", line 281, in call
    return method(parsed, *args, **kwargs)
  File "renpy/common/000statements.rpy", line 123, in execute_play_music
    renpy.music.play(_audio_eval(p["file"]),
  File "renpy/common/000statements.rpy", line 32, in _audio_eval
    return eval(expr, locals=store.audio.__dict__)
  File "C:\Users\student\Desktop\Applications\renpy-8.0.1-sdk\renpy\python.py", line 1078, in py_eval
    code = py_compile(code, 'eval')
  File "C:\Users\student\Desktop\Applications\renpy-8.0.1-sdk\renpy\python.py", line 1015, in py_compile
    raise e
  File "C:\Users\student\Desktop\Applications\renpy-8.0.1-sdk\renpy\python.py", line 967, in py_compile
    raise orig_e
  File "C:\Users\student\Desktop\Applications\renpy-8.0.1-sdk\renpy\python.py", line 960, in py_compile
    tree = compile(source, filename, py_mode, ast.PyCF_ONLY_AST | flags, 1)
SyntaxError: invalid syntax (game/neg1.rpy, line 3)

While running game code:
  File "game/script.rpy", line 13, in script call
    call neg1
  File "game/neg1.rpy", line 3, in script
    play music ["./audio/You and Me.mp3", <silence 2.5>, "./audio/10dC.mp3"] volume 0.1 fadein 4 fadeout 4
  File "renpy/common/000statements.rpy", line 123, in execute_play_music
    renpy.music.play(_audio_eval(p["file"]),
  File "renpy/common/000statements.rpy", line 32, in _audio_eval
    return eval(expr, locals=store.audio.__dict__)
SyntaxError: invalid syntax (game/neg1.rpy, line 3)
Resetting cache.
Bootstrap to the start of init.init took 137.85s
Early init took 0.00s
Loader init took 0.12s
Loading error handling took 0.06s
Loading script took 0.47s
Loading save slot metadata. took 0.04s
Loading persistent took 0.00s
Faled to initialize steam: FileNotFoundError("Could not find module 'C:\\Users\\student\\Desktop\\Applications\\renpy-8.0.1-sdk\\lib\\py3-windows-x86_64\\steam_api64.dll' (or one of its dependencies). Try using the full path with constructor syntax.")
Running init code took 0.18s
Loading analysis data took 0.07s
Analyze and compile ATL took 0.01s
Index archives took 0.00s
Backing up script files to 'C:\\Users\\student\\AppData\\Roaming/RenPy/backups\\AAA':
Dump and make backups. took 0.27s
Cleaning cache took 0.00s
Making clean stores took 0.00s
Initial gc. took 0.11s
DPI scale factor: 1.000000
nvdrs: Loaded, about to disable thread optimizations.
nvdrs: b"Couldn't load nvlib." (can be ignored)
Creating interface object took 0.00s
Cleaning stores took 0.00s
Init translation took 0.11s
Build styles took 0.01s
Load screen analysis took 0.00s
Analyze screens took 0.03s
Save screen analysis took 0.04s
Prepare screens took 0.14s
Save pyanalysis. took 0.00s
Save bytecode. took 0.05s
Running _start took 0.00s
Performance test:
Interface start took 0.12s

Initializing gl2 renderer:
primary display bounds: (0, 0, 1366, 768)
swap interval: 1 frames
Windowed mode.
Vendor: "b'Intel'"
Renderer: b'Intel(R) UHD Graphics 605'
Version: b'4.6.0 - Build 27.20.100.8280'
Display Info: None
Screen sizes: virtual=(1920, 1080) physical=(1184, 666) drawable=(1184, 666)
Maximum texture size: 4096x4096
Cleaning stores took 0.00s
Init translation took 0.00s
Build styles took 0.02s
Load screen analysis took 0.17s
Analyze screens took 0.00s
Prepare screens took 0.00s
Running _start took 0.00s
Cleaning stores took 0.00s
Init translation took 0.00s
Build styles took 0.02s
Load screen analysis took 0.07s
Analyze screens took 0.00s
Prepare screens took 0.00s
Running _start took 0.00s
Cleaning stores took 0.00s
Init translation took 0.00s
Build styles took 0.01s
Load screen analysis took 0.07s
Analyze screens took 0.00s
Prepare screens took 0.00s
Running _start took 0.00s
Resetting cache.
Bootstrap to the start of init.init took 165.03s
Early init took 0.00s
Loader init took 0.12s
Loading error handling took 0.06s
Loading script took 0.34s
Loading save slot metadata. took 0.04s
Loading persistent took 0.00s
Faled to initialize steam: FileNotFoundError("Could not find module 'C:\\Users\\student\\Desktop\\Applications\\renpy-8.0.1-sdk\\lib\\py3-windows-x86_64\\steam_api64.dll' (or one of its dependencies). Try using the full path with constructor syntax.")
Running init code took 0.10s
Loading analysis data took 0.06s
Analyze and compile ATL took 0.01s
Index archives took 0.00s
Backing up script files to 'C:\\Users\\student\\AppData\\Roaming/RenPy/backups\\AAA':
Dump and make backups. took 0.20s
Cleaning cache took 0.00s
Making clean stores took 0.00s
Initial gc. took 0.11s
DPI scale factor: 1.000000
nvdrs: Loaded, about to disable thread optimizations.
nvdrs: b"Couldn't load nvlib." (can be ignored)
Creating interface object took 0.00s
Cleaning stores took 0.00s
Init translation took 0.12s
Build styles took 0.01s
Load screen analysis took 0.00s
Analyze screens took 0.04s
Save screen analysis took 0.06s
Prepare screens took 0.25s
Save pyanalysis. took 0.00s
Save bytecode. took 0.00s
Running _start took 0.00s
Performance test:
Interface start took 0.14s

Initializing gl2 renderer:
primary display bounds: (0, 0, 1366, 768)
swap interval: 1 frames
Windowed mode.
Vendor: "b'Intel'"
Renderer: b'Intel(R) UHD Graphics 605'
Version: b'4.6.0 - Build 27.20.100.8280'
Display Info: None
Screen sizes: virtual=(1920, 1080) physical=(1184, 666) drawable=(1184, 666)
Maximum texture size: 4096x4096
